--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 		</script>
 		<style type="text/css">
 			div { border: 0px soid black; }
-			div#chat { clear: both; width: 40em; height: 20ex; overflow: auto; background-color: #f0f0f0; padding: 4px; border: 1px solid black;}
-			div#input { clear: both; width: 40em; padding: 4px; background-color: #e0e0e0; border: 1px solid black; border-top: 0px;}
-			input#phrase { width: 30em; background-color: #e0f0f0;}
-			input#username { width: 14em; background-color: #e0efef;}
+			div#chat { clear: both; width: 40em; height: 20ex; overflow: auto; background-color: #f0f0ff; padding: 4px; border: 1px solid black;}
+			div#input { clear: both; width: 40em; padding: 4px; background-color: #e0e0f0; border: 1px solid black; border-top: 0px;}
+			input#phrase { width: 30em; background-color: #e0f0ff;}
+			input#username { width: 14em; background-color: #e0efff;}
 			div.hidden { display: none; }
 			span.from { font-weight: 700; }
 			span.alert { font-style: italic; }
